Probably the final one

--- a/Project_Calculator/report.tex
+++ b/Project_Calculator/report.tex
@@ -73,7 +73,7 @@
 
 \subsection{优先级规则}
 \begin{itemize}
-    \item 运算符优先级从高到低依次为：括号、乘除、加减。
+    \item 运算符优先级从高到低依次为：乘除、加减。
     \item 括号优先级另外计算，在遇到右括号时进行计算。
 \end{itemize}
 
@@ -375,7 +375,7 @@ double evaluateExpression(const string& expr) {
 1*2-3=-1
 1-2/3=0.333333
 1/2-3=-2.5
-1+2-3=0.00000
+1+2-3=0
 1-2+3=2
 1+2+3=6
 1-2-3=-4
@@ -415,7 +415,7 @@ double evaluateExpression(const string& expr) {
 -1/-2-3=-2.5
 -1+-2-3=-6
 -1--2+3=4
--1+-2+3=0.00000
+-1+-2+3=0
 -1--2-3=-2
 -1*-2*3=6
 -1/-2/3=0.166667
@@ -432,7 +432,7 @@ double evaluateExpression(const string& expr) {
 1+-2-3=-4
 1--2+3=6
 1+-2+3=2
-1--2-3=0.00000
+1--2-3=0
 1*-2*3=-6
 1/-2/3=-0.166667
 1.2+3.4=4.6
